frontend/src/components/password/password.css
.password {
    border: none;
    outline: none;
    background: var(--blackGradient);
    color: var(--mainFontColor);
    box-shadow: var(--boxShadow);
    padding: 1rem;
    border-radius: 2.5rem;
}

.password:hover {
    box-shadow: var(--inputHoverBoxShadow);
}

.password:focus {
    color: var(--inputFocus);
}

.password::placeholder {
    color: var(--placeHolderFontColor);
}

label {
    position: relative;
}

.eye-button {
    border: none;
    background: none;
    position: absolute;
    right: 20px;
    top: 10px;
}

